# obsidian-agent

./: .cursorrules  .gitignore  README.md  answer copy.md  answer.md  main.py  pyproject.toml  requirements.txt  run-agent.sh
scripts/: snapshot_vault.sh
src/: __init__.py  agent.py  cli.py  vault.py
